--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin:0;
+    margin: 0;
     gap: 30px;
 }
 
@@ -26,6 +26,7 @@ body {
     max-width: 1440px;
     padding: 0 50px;
     box-sizing: border-box;
+    margin: auto;
 }
 
 .main-container main{
@@ -75,11 +76,13 @@ a {
 
 /****** Header ******/
 .header-nav {
+    width: 100%;
     max-width: 1440px;
     height: 79px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin: 0 auto;
 }
 
 .header-nav div{
