--- a/css/style.css
+++ b/css/style.css
@@ -335,10 +335,9 @@ a {
 }
 
 
-/* Activités */
+/****** Activités ******/
 
 #id-activites{
-    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -346,7 +345,7 @@ a {
 }
 
 .activites-cards {
-    width: 95.52%;
+    width: 100%;
     height: 439px;
     display: flex;
     gap: 30px;
@@ -358,13 +357,16 @@ a {
 }
 
 .activites-cards article{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     padding: 0;
 }
 
 .activites-cards article img{
-    height: 380px;
+    width: 100%;
+    height: 86.56%;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
@@ -374,7 +376,7 @@ a {
 }
 
 
-/* Footer */
+/****** Footer ******/
 
 .footer-main {
     width: 100%;
@@ -396,7 +398,13 @@ a {
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
-    
+
+/****** Général ******/
+    .main-container {
+        max-width: 924px;
+        padding: 0;
+    }
+
 /****** Recherche d'hébergement ******/
     .accomodation-filters {
         width: 73.5%;
@@ -420,7 +428,6 @@ a {
 
     .populaires {
         width: 100%;
-        margin-top: 50px;
     }
 
     .populaires-cards {
@@ -440,7 +447,31 @@ a {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+
+
+/****** Activités ******/
+    #id-activites {
+        max-width: 924px;
+        width: 100%;
+        padding: 30px;
+    }
+    .activites-cards {
+        width: 93.5%;
+        height: 270px;
+    }
+    .activites-cards article img{
+        height: 200px;
+    }
 }
+
+
+
+
+
+
+
+
+
 
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) and (min-width: 320px) {
