--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,7 @@ a {
 
 .footer-main {
     width: 100%;
+    height: 163px;
     display: flex;
     background-color: var(--main-bg-color);
 }
@@ -387,11 +388,14 @@ a {
 .footer-main div{
     display: flex;
     flex-direction: column;
-    gap: 15px;
-    padding: 20px;
+    /* gap: 15px; */
     width: 33.28%;
+    padding: 0 20px;
 }
 
+.footer-main div a{
+    margin-bottom: 15px;
+}
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
@@ -464,16 +468,9 @@ a {
     }
 }
 
-
-
-
-
-
-
-
-
-
 /* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) and (min-width: 320px) {
-    /* ... */
+@media (max-width: 767.98px) {
+
+/****** Général ******/
+
 }
