--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,6 @@ a {
 .header-nav {
     width: 100%;
     max-width: 1440px;
-    height: 79px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -176,12 +175,17 @@ a {
 .accomodation-filters {
     display: flex;
     align-items: center;
-    width: 56.6%;
-    height: 50px;
+    width: 100%;
+    height: auto;
     gap: 15px;
 }
 
-.accomodation-filters button{
+.filters-buttons{
+    display: flex;
+    gap: 15px;
+}
+
+.filters-buttons button{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -189,16 +193,16 @@ a {
     border: 2px solid #D9D9D9;
     border-radius: 25px;
     background-color: transparent;
-    height: 100%;
+    height: 49px;
     padding: 4px 19px;
 }
 
-.accomodation-filters button span{
+.filters-buttons button span{
     font-size: 17px;
     font-weight: 700;
 }
 
-.accomodation-filters button:hover{
+.filters-buttons button:hover{
     background-color: var(--filter-bg-color);
 }
 
@@ -227,7 +231,6 @@ a {
 #hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
-    gap: 40px;
 }
 
 #hebergements-and-populaires section {
@@ -242,7 +245,6 @@ a {
 .hebergements {
     display: flex;
     flex-direction: column;
-    gap: 30px;
     width: 65%;
 }
 
@@ -250,19 +252,19 @@ a {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 30px;
+    justify-content: space-between;
 }
 
 .hebergements-cards article{
     display: flex;
     flex-direction: column;
     padding-bottom: 15px;
-    gap: 4px;
-    height: 207.25px;
 }
 
 .hebergements-cards a{
-    width: 30.86%;
+    width: 30.87%;
+    margin: 30px 0;
+    height: 207.25px;
 }
 
 .hebergements-cards img{
@@ -270,6 +272,7 @@ a {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     padding-bottom: 5px;
+    box-sizing: border-box;
 }
 
 .hebergements-cards .hebergements-txt {
@@ -278,6 +281,10 @@ a {
     gap: 8px;
     padding: 0 15px;
     box-sizing: border-box;
+}
+
+.hebergements .title-h3{
+    height: 21px;
 }
 
 .hebergements-cards .card-title {
@@ -402,27 +409,25 @@ a {
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
 
-/****** Général ******/
-    .main-container {
-        max-width: 924px;
-        padding: 0;
-    }
-
 /****** Recherche d'hébergement ******/
     .accomodation-filters {
-        width: 73.5%;
-        flex-wrap: wrap;
-        margin-bottom: 35px;
-    }
-    .accomodation-filters h3{
-        width: 100%;
-        margin: 0;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0;
     }
 
+    .accomodation-filters h3{
+        display: flex;
+    }
+
+    .filters-buttons .nos-pepites {
+        background-color: var(--filter-bg-color);
+    }
 
 /****** Hebergements And Populaires ***********/
     #hebergements-and-populaires {
         flex-direction: column;
+        gap: 50px;
     }
 
     .hebergements {
@@ -472,6 +477,10 @@ a {
 
 /****** Général ******/
 
+.main-container{
+    padding: 0;
+}
+
 .main-container main{
     gap: 30px;
 }
@@ -480,7 +489,7 @@ a {
     .header-nav{
         flex-direction: column;
         align-items: center;
-        margin-bottom: 30px;
+
     }
 
      .header-nav div{
@@ -499,9 +508,10 @@ a {
     .header-nav nav a{
         display: flex;
         width: 100%;
+        height: 100%;
         justify-content: center;
-        text-align: center;
-        border-bottom: 2px solid transparent;
+        border-bottom: 2px solid var(--main-bg-color);
+        border-top: 0;
     }
 
 
