--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,6 @@ a {
 .accomodation-search-bar form input{
     width: 195px;
     height: 47px;
-    display: flex;
     text-align: center;
     border: none;
     outline: none;
@@ -485,7 +484,7 @@ a {
 }
 
 /* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) and (min-width: 320px) {
+@media (max-width: 767.98px)  {
 
 /****** Général ******/
 
@@ -544,8 +543,15 @@ a {
 
     .accomodation-search-bar{
         width: auto;
-        justify-content: space-between;
+    }
 
+    .accomodation-search-bar form{
+        display: flex;
+        flex-grow: 1;
+    }
+
+    .accomodation-search-bar form input{
+        flex-grow: 1;
     }
 
     .accomodation-search-bar .search-btn-mobile{
